# apriltags2_ethz

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  setup.py  test.py
.github/workflows/: build-wheels.yml
aprilgrid/: GridCalibrationTargetAprilgrid.cpp  __init__.py  createTargetPDF.py  tagFamilies.py
include/: ndarray_converter.h
src/: module.cpp  ndarray_converter.cpp
